clean-room-demo/webapp/backend/aks-deployment/form-recognizer/Reciept/azure-cognitive-service-read-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: azure-cognitive-service-read
  name: azure-cognitive-service-read
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: azure-cognitive-service-read
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/ocrvnet: "true"
        io.kompose.service: azure-cognitive-service-read
    spec:
      containers:
        - env:
            - name: EULA
              value: accept - billing={READ_ENPOINT}
            - name: apikey
              value: '{READ_KEY}'
          image: mcr.microsoft.com/azure-cognitive-services/vision/read:3.2
          name: azure-cognitive-service-read
          resources:
            limits:
              sgx.intel.com/epc: 5Mi
      restartPolicy: Always
status: {}
