clean-room-demo/webapp/backend/aks-deployment/form-recognizer/Reciept/azure-cognitive-service-receipt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: azure-cognitive-service-receipt
  name: azure-cognitive-service-receipt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: azure-cognitive-service-receipt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/ocrvnet: "true"
        io.kompose.service: azure-cognitive-service-receipt
    spec:
      containers:
        - env:
            - name: AzureCognitiveServiceReadHost
              value: http://azure-cognitive-service-read:5000
            - name: EULA
              value: accept
            - name: apikey
              value: '{FR_KEY}'
            - name: billing
              value: '{FR_ENDPOINT}'
          image: mcr.microsoft.com/azure-cognitive-services/form-recognizer/receipt
          name: azure-cognitive-service-receipt
          ports:
            - containerPort: 5050
          resources:
            limits:
              sgx.intel.com/epc: 5Mi
      restartPolicy: Always
status: {}
