clean-room-demo/webapp/backend/aks-deployment/form-recognizer/Reciept/azure-cognitive-service-receipt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: azure-cognitive-service-receipt
  name: azure-cognitive-service-receipt
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5050
  selector:
    io.kompose.service: azure-cognitive-service-receipt
status:
  loadBalancer: {}
