clean-room-demo/webapp/backend/aks-deployment/form-recognizer/Reciept/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognizer-reciept
  labels:
    app: recognizer-reciept-deployment
spec:
  selector:
    matchLabels:
      app: recognizer-reciept-app
  replicas: 1
  template:
    metadata:
      labels:
        app: recognizer-reciept-app
    spec:
      containers:
      - name: azure-cognitive-service-reciept
        image: mcr.microsoft.com/azure-cognitive-services/form-recognizer/reciept
        ports:
        - containerPort: 5000
        resources:
          limits:
            sgx.intel.com/epc: 5Mi # This limit will automatically place the job into a confidential computing node and mount the required driver volumes. Alternatively, you can target deployment to node pools with node selector.
        livenessProbe:
          httpGet:
            path: /ContainerLiveness
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: recognizer-reciept
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: recognizer-reciept-app
