clean-room-demo/webapp/backend/aks-deployment/form-recognizer/Reciept/ocrvnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ocrvnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ocrvnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ocrvnet: "true"
